--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,280 @@
-<div>HELLO WORLD YPU ARE INN</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Main css link -->
+    <link rel="stylesheet" href="/main.css">
+    <!-- Bootstrap script link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!-- Font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Portfolio</title>
+</head>
+<body>
+    <div class="frame">
+        <div class="main_frame">
+            <div class="left_frame">
+                <div class="left_1">
+                    <div class="left_1-1">
+                        <img src="images/Profile.png" alt="#" width="156px" height="135px">
+                    </div>
+                    <div class="left_1-2">
+                        <%=user.name%>
+                    </div>
+                    <div class="left_1-3">
+                        <%=user.profession%>
+                    </div>
+                    <div class="left_icons">
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-facebook.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-instagram.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-twitter.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-linkedin.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-Youtube.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Icons-dribbble.svg" alt="#" class="icon_1">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="marginer1"></div>
+                <div class="left_2">
+                    <div class="left_2-1">
+                        <span class="left_2-1-names">
+                            <h3>Age:</h3>
+                        </span>
+                        <span class="left_2-1-values">24
+                        </span>
+                    </div>
+                    <div class="left_2-2">
+                        <div class="left_2-1-names-2">
+                            <h3>Residence:</h3>
+                        </div>
+                        <span class="left_2-1-values">
+                            <%=user.residence%>
+                        </span>
+                    </div>
+                    <div class="left_2-3">
+                        <span class="left_2-1-names-3">
+                            <h3>Freelance:</h3>
+                        </span>
+                        <span class="left_2-1-values-2">
+                            Available
+                        </span>
+                    </div>
+                    <div class="left_2-4">
+                        <span class="left_2-1-names-4">
+                            <h3>Address:</h3>
+                        </span>
+                        <span class="left_2-1-values">
+                            <%=user.adress%>
+                        </span>
+                    </div>
+                    
+                </div>
+                <div class="marginer"></div>
+                <div class="left_3">
+                    <div class="languages">
+                        <h3 class="languages_h3">Langauges</h3>
+
+                        <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.languages[0]%></span>
+                                <span>100%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:100%"></div></div>
+                        </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.languages[1]%></span>
+                                <span>80%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:80%"></div></div>
+                          </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.languages[2]%></span>
+                                <span>60%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:60%"></div></div>
+                          </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_4">
+                    <div class="languages">
+                        <h3 class="languages_h3">Skills</h3>
+
+                        <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.skills[0]%></span>
+                                <span>90%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:90%"></div></div>
+                        </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.skills[1]%></span>
+                                <span>85%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:85%"></div></div>
+                          </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.skills[2]%></span>
+                                <span>80%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:80%"></div></div>
+                          </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.skills[3]%></span>
+                                <span>75%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:75%"></div></div>
+                          </div>
+                          <div class="lang">
+                            <div class="lang-span">
+                                <span><%=user.skills[4]%></span>
+                                <span>85%</span>
+                            </div>
+                            <div class="bar"><div class="fill" style="width:85%"></div></div>
+                          </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_5">
+                    <div class="extra_skills">
+                        <h3 class="extraS_h3">Extra Skills</h3>
+                        <div class="extra_1">
+                            <img src="icon/Icons.svg" alt="#">
+                            <span><%=user.extra_skills[0]%></span>
+                        </div>
+                        <div class="extra_1">
+                            <img src="icon/Icons.svg" alt="#">
+                            <span><%=user.extra_skills[1]%></span>
+                        </div>
+                        <div class="extra_1">
+                            <img src="icon/Icons.svg" alt="#">
+                            <span><%=user.extra_skills[2]%></span>
+                        </div>
+                        <div class="extra_1">
+                            <img src="icon/Icons.svg" alt="#">
+                            <span><%=user.extra_skills[3]%></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+            </div>
+            <div class="midd_frame">
+                <div class="midd_top-frame">
+                    <div class="midd_top-left">
+                        <h1 class="midd_left-h1"><%=user.work%></h1>
+                        <p class="midd_left-p"><%=user.about_me%></p>
+                        <div class="midd_left-btn">
+                            <button class="midd_top-left-btn">HIRE ME
+                                <img src="btn_icon/Frame.svg" alt="#">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="midd_top-right">
+                        <img src="images/profile_img.png" alt="">
+                    </div>
+                    <img src="midd_top_img/ellipse 15.svg" alt="" class="midd_top_ellipse1">
+                    <img src="midd_top_img/Ellipse 16.svg" alt="" class="midd_top_ellipse2">
+                    <img src="midd_top_img/Rectangle 52.svg" alt="" class="midd_top_rectangle1">
+                    <img src="midd_top_img/Ellipse 16.svg" alt="" class="midd_top_ellipse3">
+                    <img src="midd_top_img/ellipse 15.svg" alt="" class="midd_top_ellipse4">
+                    <img src="midd_top_img/Rectangle 51.svg" alt="" class="midd_top_rectangle2">
+                    <img src="midd_top_img/Polygon 1.svg" alt="" class="midd_top_polygon">
+                </div>
+                <div class="midd_bottom-frame">
+                    <div class="midd_bottom-itroduce">
+                        <h1 class="midd_bottom-h1">My Services</h1>
+                        <p class="midd_bottom-p"><%=user.service_desc%></p>
+                    </div>
+                    <div class="midd_bottom-boxes">
+                        <div class="box">
+                            <img src="box_images/coding.svg" alt="#" class="midd_box_img" width="68px" height="68px">
+                            <h4 class="midd_bottom_h4">Web Development</h4>
+                            <p class="midd_bottom_p">Blog, E-Commerce</p>
+                        </div>
+                        <div class="box">
+                            <img src="box_images/illustration.svg" alt="#" class="midd_box_img" width="68px" height="68px">
+                            <h4 class="midd_bottom_h4">UI/UX Design</h4>
+                            <p class="midd_bottom_p">Mobile app, Website design</p>
+                        </div>
+                        <div class="box">
+                            <img src="box_images/microphone.svg" alt="#" class="midd_box_img" width="68px" height="68px">
+                            <h4 class="midd_bottom_h4">Sound Design</h4>
+                            <p class="midd_bottom_p">Voice Over, Beat Making</p>
+                        </div>
+                        <div class="box">
+                            <img src="box_images/game-development.svg" alt="#" class="midd_box_img" width="68px" height="68px">
+                            <h4 class="midd_bottom_h4">Game Design</h4>
+                            <p class="midd_bottom_p">Character Design, Props & Objects</p>
+                        </div>
+                        <div class="box">
+                            <img src="box_images/photographer.svg" alt="#" class="midd_box_img" width="68px" height="68px">
+                            <h4 class="midd_bottom_h4">Photography</h4>
+                            <p class="midd_bottom_p">Portrait, Product Photography</p>
+                        </div>
+                        <div class="box">
+                            <h4 class="midd_bottom_h4">Advertising</h4>
+                            <p class="midd_bottom_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi. </p>
+                            <button class="midd_botton_btn">ORDER NOW <img src="btn_icon/midd_btn.svg" alt="#"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right_frame">
+                <div class="right_frame_contrast">
+                    <img src="menu_icon/contrast.svg" alt="#"   class="menu_icon_contrast">
+                </div>
+                <div class="right_frame_menu_icons">
+                    <div class="menu_icons">
+                        <img src="menu_icon/home.svg" alt="#" class="menu_icon_img">
+                    </div>
+                    <div class="menu_icons">
+                        <img src="menu_icon/file-code.svg" alt="#"   class="menu_icon_img">
+                    </div>
+                    <div class="menu_icons">
+                        <img src="menu_icon/cv.svg" alt="#" class="menu_icon_img">
+                    </div>
+                    <div class="menu_icons">
+                        <img src="menu_icon/vector.svg" alt="#" class="menu_icon_img">
+                    </div>
+                    <div class="menu_icons">
+                        <img src="menu_icon/blog.svg" alt="#" class="menu_icon_img">
+                    </div>
+                    <div class="menu_icons">
+                        <img src="menu_icon/contact.svg" alt="#" class="menu_icon_img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
