--- a/public/main.css
+++ b/public/main.css
@@ -327,24 +327,20 @@ body{
 }
 
 .bar {
-    height: 6px;
+    height: 4px;
     background: #f0f0f0;
     border: 1px solid orange;
     border-radius: 5px;
-    margin-top: 5px;
+    padding: 1px;
     overflow: hidden;
 }
   
 .fill {
+    
     height: 100%;
     background: orange;
     border-radius: 5px;
 }
-
-
-
-
-
 
 
 
