--- a/views/author.ejs
+++ b/views/author.ejs
@@ -248,6 +248,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="midd_frame_price">
+                    <div class="midd_frame_price-h1">
+                    <h1>Price Lists</h1>
+                </div>
+                </div>
             </div>
             <div class="right_frame">
                 <div class="right_frame_contrast">
