--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -28,10 +28,13 @@
               style="flex: 1"
             />
             <button class="btn btn-primary" style="border-radius: 20px">
-              Yangi Harid Qushish
+              Yangi Maqsad Qo'shish
             </button>
           </div>
         </form>
+        <button class="btn btn-danger ml-3" style="margin-top: 20px" formaction="/delete-all">
+          Barchasini O'chirish
+        </button>
       </div>
   </div>
 </body>
