--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -32,17 +32,18 @@
       <% plans.map(function(item){ %>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="item-text">
-            <%=item.reja%>
+            <%= item.reja %>
           </span>
           <div class="btn-group">
-            <button data-id="<% item._id %>" class="btn btn-sm btn-outline-secondary edit-me">✏️ O'zgartirish</button>
-            <button data-id="<% item._id %>" class="btn btn-sm btn-outline-danger delete-me">🗑 O'chirish</button>
+            <!-- _id ni string sifatida chiqarish -->
+            <button data-id="<%= item._id.toString() %>" class="btn btn-sm btn-outline-secondary edit-me">✏️ O'zgartirish</button>
+            <button data-id="<%= item._id.toString() %>" class="btn btn-sm btn-outline-danger delete-me">🗑 O'chirish</button>
           </div>
         </li>
-        <% }) %>
+      <% }) %>
     </ul>
 
-    <button class="btn btn-danger delete-btn mt-4" formaction="/delete-all">
+    <button class="btn btn-danger delete-btn mt-4" id="delete-all">
       Hamma Rejalarni O'chirish
     </button>
   </div>
